	PR c++/44175 	* pt.c (template_args_equal): Handle one arg being NULL_TREE. 	(deduction_tsubst_fntype): Handle excessive non-infinite recursion.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174543 138bc75d-0d04-0410-961f-82ee72b054a4